Setup for 1.20